Update CSS and layout issues

--- a/src/_sass/style.scss
+++ b/src/_sass/style.scss
@@ -139,18 +139,18 @@ header {
 
 // @see https://mdbootstrap.com/snippets/standard/mdbootstrap/2515521?view=side
 // @see https://www.webnots.com/how-to-create-full-width-parallax-page-with-bootstrap/ for parallax
-#intro {
-	background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-		url("/assets/images/00007.webp");
+// #intro {
+// 	background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+// 		url("/assets/images/00007.webp");
 	// background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../images/towfiqu-barbhuiya-KKHs1e2yiwc-unsplash.jpg);
 	// background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/triangles.jpg');
 
-	background-attachment: fixed;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	height: 50vh;
-	min-height: 500px;
+	// background-attachment: fixed;
+	// background-size: cover;
+	// background-position: center;
+	// background-repeat: no-repeat;
+	// height: 50vh;
+	// min-height: 500px;
 
 	// background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url({{ background | url }});
 	// background-attachment: fixed;
@@ -159,7 +159,7 @@ header {
 	// background-repeat: no-repeat;
 	// height: 50vh;
 	// min-height: 500px;
-}
+// }
 
 // TODO: https://stackoverflow.com/questions/70273914/how-to-change-font-size-at-breakpoints-bootstrap-5
 .logo {
